feat: hero section title & decal

--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -3,13 +3,13 @@ import FabrLogo from './FabrLogo.astro';
 
 ---
 
-<div class='bg-fabr-orange text-white'>
-	<nav class='app-container py-4 flex items-center justify-between'>
+<div class='bg-fabr-orange text-fabr-cream'>
+	<nav class='app-container py-5 flex items-center justify-between'>
 		<a href="/">
-			<FabrLogo class='text-white' height='42px' />
+			<FabrLogo height='32px' />
 		</a>
 		<ul class='flex space-x-6 uppercase text-sm font-semibold'>
-			<li><a href="/docs" class="text-white hover:underline">Docs</a></li>
+			<li><a href="/docs" class="hover:underline">Docs</a></li>
 		</ul>
 	</nav>
 </div>
