--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
+import HeroSection from '../components/HeroSection.astro';
 ---
 
 <Layout>
 	<Navbar/>
+	<HeroSection/>
 </Layout>
