--- a/website/src/components/HeroSection.astro
+++ b/website/src/components/HeroSection.astro
@@ -1,16 +1,19 @@
 ---
 import HeroZigZag from './HeroZigZag.astro';
-
+import { Code } from '@astrojs/starlight/components';
 ---
 
-<div class='bg-fabr-orange text-fabr-cream'>
-	<main class='app-container pt-40 pb-56'>
+<div class='bg-fabr-orange text-fabr-cream hero-section-clip'>
+	<main class='app-container pt-36 pb-40'>
 		<div class='relative'>
 			<h1 class='text-2xl text-center flex flex-col items-center gap-10'>
 				<span><span class='font-title'>fabr</span>-icate your next project</span>
-				<span class='font-title text-8xl italic'>effortlessly</span>
+				<span class='font-title text-7xl sm:text-8xl italic'>effortlessly</span>
 			</h1>
 			<HeroZigZag class='absolute -bottom-14 left-1/2 -translate-x-1/2 h-[16px]' />
+		</div>
+		<div>
+			<Code class='hero-code-snippet' code='npx fabr init' />
 		</div>
 	</main>
 </div>
