--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import HeroSection from '../components/HeroSection.astro';
+import CalloutSection from '../components/CalloutSection.astro';
 ---
 
 <Layout>
 	<Navbar/>
 	<HeroSection/>
+	<CalloutSection/>
 </Layout>
