feat: add SquigglySeparator component to the index page

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import HeroSection from '../components/HeroSection.astro';
 import CalloutSection from '../components/CalloutSection.astro';
+import SquigglySeparator from '../components/SquigglySeparator.astro';
 ---
 
 <Layout>
 	<Navbar/>
 	<HeroSection/>
 	<CalloutSection/>
+	<SquigglySeparator />
 </Layout>
