feat: add FrameworksSection component to the index page

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -4,6 +4,7 @@ import Navbar from '../components/Navbar.astro';
 import HeroSection from '../components/HeroSection.astro';
 import CalloutSection from '../components/CalloutSection.astro';
 import SquigglySeparator from '../components/SquigglySeparator.astro';
+import FrameworksSection from '../components/FrameworksSection.astro';
 ---
 
 <Layout>
@@ -11,4 +12,5 @@ import SquigglySeparator from '../components/SquigglySeparator.astro';
 	<HeroSection/>
 	<CalloutSection/>
 	<SquigglySeparator />
+	<FrameworksSection />
 </Layout>
