--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -5,6 +5,7 @@ import HeroSection from '../components/HeroSection.astro';
 import CalloutSection from '../components/CalloutSection.astro';
 import SquigglySeparator from '../components/SquigglySeparator.astro';
 import FrameworksSection from '../components/FrameworksSection.astro';
+import ContributeSection from '../components/ContributeSection.astro';
 ---
 
 <Layout>
@@ -13,4 +14,5 @@ import FrameworksSection from '../components/FrameworksSection.astro';
 	<CalloutSection/>
 	<SquigglySeparator />
 	<FrameworksSection />
+	<ContributeSection/>
 </Layout>
