--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /* Import Amaranth font for headings */
 @import '@fontsource/amaranth/400.css';
@@ -12,12 +12,12 @@
 
 @theme {
   --font-title: 'Amaranth', serif;
-  
-  --color-fabr-orange: #C94402;
-  --color-fabr-cream: #FCFAEE;
+
+  --color-fabr-orange: #c94402;
+  --color-fabr-cream: #fcfaee;
   --color-fabr-dark: #242424;
-  --color-fabr-orange-dark: #EC8856;
-  --color-fabr-light: #F1F1F1;
+  --color-fabr-orange-dark: #ec8856;
+  --color-fabr-light: #f1f1f1;
   --color-fabr-bg-dark: #242424;
 }
 
@@ -27,16 +27,31 @@
 
 /* Hero section */
 .hero-section-clip {
-	clip-path: ellipse(100% 100% at 50% 0%);
+  clip-path: ellipse(100% 100% at 50% 0%);
 }
+
 .hero-code-snippet {
-	@apply max-w-2xs mx-auto mt-28;
+  @apply max-w-2xs mx-auto mt-28;
 }
 
 .hero-code-snippet pre {
-	@apply text-white bg-neutral-800 rounded-lg border-0 p-2;
+  @apply text-white bg-neutral-800 rounded-lg border-0 p-2;
 }
 
 .hero-code-snippet * {
-	@apply text-white text-lg;
+  @apply text-white text-lg;
+}
+
+/* Contribute section */
+.squiggly-section {
+  --mask: radial-gradient(54.08px at 50% 75px, #000 99%, #0000 101%)
+      calc(50% - 60px) 0/120px 51% repeat-x,
+    radial-gradient(54.08px at 50% -45px, #0000 99%, #000 101%) 50% 30px/120px
+      calc(51% - 30px) repeat-x,
+    radial-gradient(54.08px at 50% calc(100% - 75px), #000 99%, #0000 101%) 50%
+      100%/120px 51% repeat-x,
+    radial-gradient(54.08px at 50% calc(100% + 45px), #0000 99%, #000 101%)
+      calc(50% - 60px) calc(100% - 30px) / 120px calc(51% - 30px) repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
 }
