--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -6,6 +6,7 @@ import CalloutSection from '../components/CalloutSection.astro';
 import SquigglySeparator from '../components/SquigglySeparator.astro';
 import FrameworksSection from '../components/FrameworksSection.astro';
 import ContributeSection from '../components/ContributeSection.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
@@ -15,4 +16,5 @@ import ContributeSection from '../components/ContributeSection.astro';
 	<SquigglySeparator />
 	<FrameworksSection />
 	<ContributeSection/>
+	<Footer/>
 </Layout>
