--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -62,7 +62,7 @@
 	--sl-color-accent-low: #3b180c;
 	--sl-color-accent: #b43b00;
 	--sl-color-accent-high: #ecbcac;
-	--sl-color-white: #ecbcac;
+	--sl-color-white: #ffffff;
 	--sl-color-gray-1: #efeee9;
 	--sl-color-gray-2: #c3c2bc;
 	--sl-color-gray-3: #8e8c81;
@@ -76,7 +76,7 @@
 	--sl-color-accent-low: #f2cec1;
 	--sl-color-accent: #b73d00;
 	--sl-color-accent-high: #561e08;
-	--sl-color-white: #b43b00;
+	--sl-color-white: #191814;
 	--sl-color-gray-1: #29271e;
 	--sl-color-gray-2: #3a382f;
 	--sl-color-gray-3: #5a584e;
