fix: add code formatting to template instructions in ContributeSection

--- a/website/src/components/ContributeSection.astro
+++ b/website/src/components/ContributeSection.astro
@@ -6,7 +6,7 @@ import { Icon } from '@astrojs/starlight/components';
 <div class='py-42 text-fabr-cream bg-fabr-orange squiggly-section'>
 	<section class='app-container flex flex-col gap-8'>
 		<h2 class='font-title text-4xl lg:max-w-3xl'>Cannot find template for your use case?</h2>
-		<p class='text-xl font-light leading-relaxed lg:max-w-3xl'>Add your template by just adding a fabr.config.json file to the repository & updating TEMPLATES.json in fabr's repository on GitHub</p>
-		<a class='flex items-center underline text-lg underline-offset-8' href="https://github.com/yashjawale/fabr">View Repository <Icon size='1.5rem' name='right-caret' /></a>
+		<p class='text-xl font-light leading-relaxed lg:max-w-3xl'>Add your template by just adding a <code>fabr.config.json</code> file to the repository & updating <code>TEMPLATES.json</code> in fabr's repository on GitHub</p>
+		<a class='flex items-center underline text-lg underline-offset-8' href="https://github.com/yashjawale/fabr" target='_blank'>View Repository <Icon size='1.5rem' name='right-caret' /></a>
 	</section>
 </div>
