style: enhance dark mode support across components and update global styles

--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -3,7 +3,7 @@ import FabrLogo from './FabrLogo.astro';
 
 ---
 
-<footer class='app-container py-16 text-fabr-orange'>
+<footer class='app-container py-16'>
 	<FabrLogo width='72px' />
 	<p class='pt-8 text-lg'>Built & maintained with ❤️ on <a class='underline underline-offset-4' href='https://github.com/yashjawale/fabr' target='_blank'>GitHub</a></p>
 </footer>
