--- a/website/src/components/FrameworksSection.astro
+++ b/website/src/components/FrameworksSection.astro
@@ -75,10 +75,10 @@ const frameworks = [
 
 ---
 
-<section class='app-container py-32 text-center text-fabr-orange'>
+<section class='app-container py-32 text-center'>
 	<h2 class='font-title text-5xl leading-tight md:max-w-2xl mx-auto'>Compatible with your favourite technologies</h2>
 	<p class='mt-8 text-xl md:max-w-2xl mx-auto'>fabr is built around folder templates & shell commands, making bootstrapping any project possible regardless of language or framework</p>
-	<div class='flex gap-8 flex-wrap justify-center items-center mt-16 max-w-3xl mx-auto opacity-50 grayscale'>
+	<div class='flex gap-8 flex-wrap justify-center items-center mt-16 max-w-3xl mx-auto opacity-50 grayscale dark:invert-30 dark:opacity-80'>
 		{frameworks.map(framework => (
 			<a
 				href={framework.url}
