--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import FabrLogo from './FabrLogo.astro';
 
 ---
 
-<div class='bg-fabr-orange text-fabr-cream'>
+<div class='bg-fabr-orange text-fabr-cream dark:bg-fabr-orange-dark/20'>
 	<nav class='app-container py-5 flex items-center justify-between'>
 		<a href="/">
 			<FabrLogo height='32px' />
