--- a/website/src/components/CalloutSection.astro
+++ b/website/src/components/CalloutSection.astro
@@ -2,7 +2,7 @@
 ---
 
 <section class='app-container py-32'>
-	<p class='text-4xl md:text-5xl text-fabr-orange font-[250] lg:max-w-3xl leading-tight'>
+	<p class='text-4xl md:text-5xl font-[250] lg:max-w-3xl leading-tight'>
 		<span class='font-title'>Kickstart</span> your project's development with ready to use scaffolding covering common use cases, all under a single command...
 	</p>
 </section>
