--- a/website/src/components/HeroSection.astro
+++ b/website/src/components/HeroSection.astro
@@ -3,7 +3,7 @@ import HeroZigZag from './HeroZigZag.astro';
 import { Code } from '@astrojs/starlight/components';
 ---
 
-<div class='bg-fabr-orange text-fabr-cream hero-section-clip'>
+<div class='bg-fabr-orange dark:bg-fabr-orange-dark/20 text-fabr-cream hero-section-clip'>
 	<main class='app-container pt-36 pb-40'>
 		<div class='relative'>
 			<h1 class='text-2xl text-center flex flex-col items-center gap-10'>
