--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import '../styles/global.css'
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body class='bg-fabr-cream'>
+	<body class='bg-fabr-cream text-fabr-orange dark:bg-fabr-dark dark:text-fabr-cream'>
 		<slot />
 	</body>
 </html>
