--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -10,6 +10,8 @@
 @import 'tailwindcss/theme.css' layer(theme);
 @import 'tailwindcss/utilities.css' layer(utilities);
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-title: 'Amaranth', serif;
 
