style: update theme selector buttons to use icons and enhance active button styles

--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -59,6 +59,6 @@ button.theme-button {
 	@apply p-1 rounded-full duration-0;
 }
 
-/* button.active {
-	@apply text-background bg-foreground bg-opacity-90;
-} */
+button.active {
+	@apply text-fabr-orange bg-fabr-cream;
+}
