style: adjust Navbar layout by adding list item wrapper for ThemeSelector

--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -9,9 +9,9 @@ import ThemeSelector from './ThemeSelector.astro';
 		<a href="/">
 			<FabrLogo height='32px' />
 		</a>
-		<ul class='flex space-x-6 uppercase text-sm font-semibold'>
+		<ul class='flex items-center gap-8 uppercase text-sm font-semibold'>
 			<li><a href="/docs" class="hover:underline">Docs</a></li>
-			<ThemeSelector/>
+			<li><ThemeSelector/></li>
 		</ul>
 	</nav>
 </div>
