fix: update links in Navbar and FrameworksSection, and adjust site configuration in astro.config.mjs

--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -6,11 +6,11 @@ import ThemeSelector from './ThemeSelector.astro';
 
 <div class='bg-fabr-orange text-fabr-cream dark:bg-fabr-orange-dark/20'>
 	<nav class='app-container py-5 flex items-center justify-between'>
-		<a href="/">
+		<a href="/fabr">
 			<FabrLogo height='32px' />
 		</a>
 		<ul class='flex items-center gap-8 uppercase text-sm font-semibold'>
-			<li><a href="/docs" class="hover:underline">Docs</a></li>
+			<li><a href="/fabr/docs" class="hover:underline">Docs</a></li>
 			<li><ThemeSelector/></li>
 		</ul>
 	</nav>
