--- a/website/src/components/FrameworksSection.astro
+++ b/website/src/components/FrameworksSection.astro
@@ -88,7 +88,7 @@ const frameworks = [
 				title={framework.name}
 			>
 				<img
-					src={`/frameworkicons/${framework.file}.svg`}
+					src={`/fabr/frameworkicons/${framework.file}.svg`}
 					alt={framework.name}
 					class='w-8 h-8 md:w-10 md:h-10'
 				/>
