--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import '../styles/global.css'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>fabr</title>
 	</head>
 	<body class='bg-fabr-cream text-fabr-orange dark:bg-fabr-dark dark:text-fabr-cream'>
 		<slot />
