--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import '../styles/global.css'
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/fabr/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>fabr</title>
 	</head>
