--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from '@astrojs/starlight/components';
 import FabrLogo from './FabrLogo.astro';
 import ThemeSelector from './ThemeSelector.astro';
 
@@ -9,8 +10,9 @@ import ThemeSelector from './ThemeSelector.astro';
 		<a href="/fabr">
 			<FabrLogo height='32px' />
 		</a>
-		<ul class='flex items-center gap-8 uppercase text-sm font-semibold'>
+		<ul class='flex items-center gap-6 uppercase text-sm font-semibold'>
 			<li><a href="/fabr/docs" class="hover:underline">Docs</a></li>
+			<li><a href="https://github.com/yashjawale/fabr" class="text-2xl" target='_blank'><Icon name='github'/></a></li>
 			<li><ThemeSelector/></li>
 		</ul>
 	</nav>
