refactor: SVG imports to remove unnecessary query parameters

--- a/website/src/components/HeroSection.astro
+++ b/website/src/components/HeroSection.astro
@@ -1,5 +1,5 @@
 ---
-import HeroZigZagSvg from '../assets/hero-zigzag.svg?component';
+import HeroZigZagSvg from '../assets/hero-zigzag.svg';
 import { Code } from '@astrojs/starlight/components';
 ---
 
