--- a/website/src/components/Navbar.astro
+++ b/website/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from '@astrojs/starlight/components';
-import FabrSvg from '../assets/fabr.svg?component';
+import FabrSvg from '../assets/fabr.svg';
 import ThemeSelector from './ThemeSelector.astro';
 
 ---
