--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import HeroSection from '../components/HeroSection.astro';
 import CalloutSection from '../components/CalloutSection.astro';
-import SquigglySeparatorSvg from '../assets/squiggly-separator.svg?component';
+import SquigglySeparatorSvg from '../assets/squiggly-separator.svg';
 import FrameworksSection from '../components/FrameworksSection.astro';
 import ContributeSection from '../components/ContributeSection.astro';
 import Footer from '../components/Footer.astro';
