refactor: Update component styles and structure for consistency
- Refactored CalloutSection, ContributeSection, Footer, FrameworksSection, HeroSection, Navbar, and StyleDemo components to use consistent class naming and formatting.
- Improved readability by aligning code formatting and ensuring proper indentation.
- Updated theme selector buttons for better accessibility and usability.
- Enhanced global styles and theme configurations for improved visual consistency across the application.
- Added auto-formatting and code quality workflows to GitHub Actions for better code maintenance.
- Introduced Prettier and ESLint configurations for consistent code style and quality checks.

--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -1,9 +1,14 @@
 ---
-import FabrSvg from '../assets/fabr.svg';
-
+import FabrSvg from '../assets/fabr.svg'
 ---
 
-<footer class='app-container py-16'>
-	<FabrSvg width='72px' height='auto' />
-	<p class='pt-8 text-lg'>Built & maintained with ❤️ on <a class='underline underline-offset-4' href='https://github.com/yashjawale/fabr' target='_blank'>GitHub</a></p>
+<footer class="app-container py-16">
+	<FabrSvg width="72px" height="auto" />
+	<p class="pt-8 text-lg">
+		Built & maintained with ❤️ on <a
+			class="underline underline-offset-4"
+			href="https://github.com/yashjawale/fabr"
+			target="_blank">GitHub</a
+		>
+	</p>
 </footer>
