--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,22 +1,22 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro';
-import HeroSection from '../components/HeroSection.astro';
-import CalloutSection from '../components/CalloutSection.astro';
-import SquigglySeparatorSvg from '../assets/squiggly-separator.svg';
-import FrameworksSection from '../components/FrameworksSection.astro';
-import ContributeSection from '../components/ContributeSection.astro';
-import Footer from '../components/Footer.astro';
+import Layout from '../layouts/Layout.astro'
+import Navbar from '../components/Navbar.astro'
+import HeroSection from '../components/HeroSection.astro'
+import CalloutSection from '../components/CalloutSection.astro'
+import SquigglySeparatorSvg from '../assets/squiggly-separator.svg'
+import FrameworksSection from '../components/FrameworksSection.astro'
+import ContributeSection from '../components/ContributeSection.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <Layout>
-	<Navbar/>
-	<HeroSection/>
-	<CalloutSection/>
-	<div class='text-fabr-orange dark:text-fabr-orange-dark flex justify-center items-center py-6'>
-		<SquigglySeparatorSvg width='96' height='auto' />
+	<Navbar />
+	<HeroSection />
+	<CalloutSection />
+	<div class="text-fabr-orange dark:text-fabr-orange-dark flex justify-center items-center py-6">
+		<SquigglySeparatorSvg width="96" height="auto" />
 	</div>
 	<FrameworksSection />
-	<ContributeSection/>
-	<Footer/>
+	<ContributeSection />
+	<Footer />
 </Layout>
